@@ -1,3 +1,8 @@
+2010-10-02  Janus Weil  <janus@gcc.gnu.org>
+
+	PR fortran/45748
+	* gfortran.dg/intrinsic_6.f90: New.
+
 2010-10-02  Thomas Koenig  <tkoenig@gcc.gnu.org>
 
 	PR fortran/42831
