@@ -1,3 +1,9 @@
+2010-10-02  Janus Weil  <janus@gcc.gnu.org>
+
+	PR fortran/45748
+	* resolve.c (resolve_formal_arglist): Avoid setting default type for
+	formal arguments of intrinsic procedures.
+
 2010-09-30  Janus Weil  <janus@gcc.gnu.org>
 
 	PR fortran/45828
